# LOLRuuune

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bat  rune.json
docs/: build.md  lcu.md
src/: CMakeLists.txt  decode.cpp  decode.h  icon.rc  main.cpp  re.qrc  ubuntu.qss
src/gui/: CMakeLists.txt  mainwnd.cpp  mainwnd.h
src/lcu/: CMakeLists.txt  lcu.cpp  lcu.h  rune_page.cpp  rune_page.h
src/logger/: CMakeLists.txt  log.cpp  log.h
src/static/: ubuntu.qss
